with new ui and text input validated

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,58 +7,78 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp" />
-
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/company_name"
-        android:inputType="text"
-        android:hint="company name"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/result"
-        android:layout_marginTop="65dp" />
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@+id/result"
+        android:layout_centerHorizontal="true"
+        app:errorEnabled="true">
 
-    <EditText
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/child_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Company Name"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/company_city"
-        android:inputType="text"
-        android:hint="city"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/company_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="139dp" />
+        app:errorEnabled="true">
 
-    <EditText
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/child_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="City"
+            android:inputType="text"
+            android:textSize="20sp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/company_address"
-        android:inputType="text"
-        android:hint="address"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@+id/company_city"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="216dp" />
-    
+        android:layout_marginTop="10dp"
+        app:errorEnabled="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/child_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Address"
+            android:inputType="text"
+            android:textSize="20sp" />
+
+    </android.support.design.widget.TextInputLayout>
+
     <Button
         android:id="@+id/btn_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
-        android:text="@string/but_1_name"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btn_2"
+        android:layout_marginEnd="70dp"
+        android:text="@string/but_1_name" />
 
     <Button
         android:id="@+id/btn_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="77dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="108dp"
+        android:layout_marginStart="70dp"
         android:text="@string/but_2_name" />
 
 </RelativeLayout>
