--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/nav_view"
         android:icon="@drawable/ic_format_list_bulleted_black_24dp"
-        android:title="Edit" />
+        android:title="View" />
 
     <item
         android:id="@+id/nav_add"
