--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -4,24 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginLeft="25dp"
+    android:layout_marginRight="25dp"
     android:gravity="center"
     tools:context=".Activity2">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_close_black_24dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginRight="7dp"
-        android:elevation="5dp"
-        android:layout_alignParentRight="true"/>
-    
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
         app:cardBackgroundColor="@color/colorAccent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -40,44 +30,54 @@
                 android:layout_marginBottom="25dp">
 
                 <TextView
+                    android:id="@+id/view_company_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:textAlignment="center"
                     android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:text="Tech Company"/>
+                    android:textSize="25dp"/>
 
                 <TextView
+                    android:id="@+id/view_company_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:textAlignment="center"
-                    android:textSize="15dp"
-                    android:text="Company Name:Google"/>
+                    android:textSize="15dp" />
 
                 <TextView
+                    android:id="@+id/view_company_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:textAlignment="center"
-                    android:textSize="15dp"
-                    android:text="@string/company_des"/>
+                    android:textSize="15dp" />
 
                 <TextView
+                    android:id="@+id/view_company_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:textAlignment="center"
-                    android:textSize="15dp"
-                    android:text="Website:www.google.com"/>
+                    android:textSize="15dp"/>
+
+                <TextView
+                    android:id="@+id/view_company_web"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="15dp"/>
 
                 <Button
                     android:id="@+id/popup_close"
