--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,83 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+<ScrollView
+    android:id="@+id/scrollview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/company_name"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        app:errorEnabled="true">
+        android:layout_height="match_parent"
+        tools:context=".HomeActivity">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/child_name"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/company_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Company Name"
-            android:inputType="text" />
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            app:errorEnabled="true">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/child_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Company Name"
+                android:inputType="text" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/company_city"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/company_name"
-        android:layout_centerHorizontal="true"
-        app:errorEnabled="true">
+        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/child_city"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/company_city"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="City"
-            android:inputType="text"
-            android:textSize="20sp" />
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/company_name"
+            android:layout_centerHorizontal="true"
+            app:errorEnabled="true">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/child_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="City"
+                android:inputType="text"
+                android:textSize="20sp" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/company_address"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_below="@+id/company_city"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        app:errorEnabled="true">
+        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/child_address"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/company_address"
             android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_below="@+id/company_city"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/child_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Address"
+                android:inputType="text"
+                android:textSize="20sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/company_description"
+            android:layout_width="match_parent"
+            android:layout_height="113dp"
+            android:layout_below="@+id/company_address"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/child_description"
+                android:layout_width="match_parent"
+                android:layout_height="82dp"
+                android:hint="Description"
+                android:inputType="text"
+                android:maxLines="20"
+                android:textSize="20sp"
+                android:scrollbars="vertical"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_2"
+            android:layout_width="162dp"
+            android:layout_marginTop="400dp"
             android:layout_height="wrap_content"
-            android:hint="Address"
-            android:inputType="text"
-            android:textSize="20sp" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/but_2_name" />
 
-    </android.support.design.widget.TextInputLayout>
+    </RelativeLayout>
 
-    <Button
-        android:id="@+id/btn_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/btn_2"
-        android:layout_marginEnd="70dp"
-        android:text="@string/but_1_name" />
-
-    <Button
-        android:id="@+id/btn_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="108dp"
-        android:layout_marginStart="70dp"
-        android:text="@string/but_2_name" />
-
-</RelativeLayout>
+</ScrollView>
