--- a/app/src/main/res/layout/single_company_edit.xml
+++ b/app/src/main/res/layout/single_company_edit.xml
@@ -40,10 +40,10 @@
         />
 
     <TextView
-        android:id="@+id/main_city"
+        android:id="@+id/txt_web"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="City "
+        android:text="Web Site "
         />
 
 
