--- a/app/src/main/res/drawable/button_green_round.xml
+++ b/app/src/main/res/drawable/button_green_round.xml
@@ -6,6 +6,6 @@
         android:radius="50dp"/>
 
     <solid
-        android:color="@color/colorGreen"/>
+        android:color="@color/Gray"/>
 
 </shape>
