--- a/app/src/main/res/layout/single_company_edit.xml
+++ b/app/src/main/res/layout/single_company_edit.xml
@@ -18,17 +18,21 @@
 
         <ImageButton
             android:id="@+id/btn_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_edit_black_24dp"
-            android:layout_gravity="right"/>
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
+            android:background="@drawable/button_green_round"
+            android:src="@drawable/ic_edit_black_24dp" />
 
         <ImageButton
             android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="right"
+            android:background="@drawable/button_green_round"
             android:src="@drawable/ic_delete_black_24dp"
-            android:layout_gravity="right"/>
+            />
 
     </LinearLayout>
 
