--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
-
+    tools:context=".HomeActivity"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/home_container">
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation_menu"/>
+
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation_menu"
@@ -20,5 +26,7 @@
         app:menu="@menu/bottom_navigation"
         android:background="?android:attr/windowBackground"
         />
+
+    </RelativeLayout>
 
 </RelativeLayout>
