--- a/app/src/main/res/layout/edit_company_dialog.xml
+++ b/app/src/main/res/layout/edit_company_dialog.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    android:id="@+id/scrollview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,9 +18,34 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btn_edit_popup"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="80dp"
+                android:background="@drawable/button_green_round"
+                android:src="@drawable/ic_edit_black_24dp"/>
+
+            <ImageButton
+                android:id="@+id/btn_delete_popup"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_green_round"
+                android:src="@drawable/ic_delete_black_24dp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,29 +55,31 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginBottom="25dp"
                 android:layout_marginTop="25dp"
-                android:layout_marginBottom="25dp">
+                android:orientation="vertical">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Company Name"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="Company Name"
                     android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:textSize="25dp"/>
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Address"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="Address"
                     android:textAlignment="center"
                     android:textSize="15dp" />
 
@@ -54,10 +87,11 @@
                     android:id="@+id/view_company_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Description"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="Description"
                     android:textAlignment="center"
                     android:textSize="15dp" />
 
@@ -65,44 +99,43 @@
                     android:id="@+id/view_company_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Mobile"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="Mobile"
                     android:textAlignment="center"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_web"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Website"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="Website"
                     android:textAlignment="center"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
 
                 <Button
                     android:id="@+id/edit_save"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Save"
-                    android:background="@drawable/button_green_round"
                     android:layout_gravity="center_horizontal"
-                    />
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_green_round"
+                    android:text="Save" />
 
                 <Button
                     android:id="@+id/edit_cancel"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="25dp"
-                    android:text="Cancel"
-                    android:background="@drawable/button_green_round"
                     android:layout_gravity="center_horizontal"
-                    />
+                    android:layout_marginBottom="25dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_green_round"
+                    android:text="Cancel" />
 
 
             </LinearLayout>
@@ -112,3 +145,4 @@
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
+</ScrollView>
