--- a/app/src/main/res/layout/edit_company_dialog.xml
+++ b/app/src/main/res/layout/edit_company_dialog.xml
@@ -69,7 +69,8 @@
                     android:hint="Company Name"
                     android:textAlignment="center"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:drawableLeft="@drawable/ic_account_balance_black_24dp"/>
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_address"
@@ -81,7 +82,8 @@
                     android:layout_marginTop="20dp"
                     android:hint="Address"
                     android:textAlignment="center"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:drawableLeft="@drawable/ic_format_align_center_black_24dp"/>
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_description"
@@ -93,7 +95,9 @@
                     android:layout_marginTop="20dp"
                     android:hint="Description"
                     android:textAlignment="center"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:drawableLeft="@drawable/ic_airplay_black_24dp"
+                    />
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_contact"
@@ -105,7 +109,8 @@
                     android:layout_marginTop="20dp"
                     android:hint="Mobile"
                     android:textAlignment="center"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:drawableLeft="@drawable/ic_call_black_24dp"/>
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/view_company_web"
@@ -116,7 +121,8 @@
                     android:layout_marginTop="20dp"
                     android:hint="Website"
                     android:textAlignment="center"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:drawableLeft="@drawable/ic_language_black_24dp"/>
 
                 <Button
                     android:id="@+id/edit_save"
@@ -125,7 +131,9 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/button_green_round"
-                    android:text="Save" />
+                    android:text="Save"
+                    android:paddingLeft="5dp"
+                    android:drawableLeft="@drawable/ic_save_black_24dp"/>
 
                 <Button
                     android:id="@+id/edit_cancel"
@@ -135,7 +143,9 @@
                     android:layout_marginBottom="25dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/button_green_round"
-                    android:text="Cancel" />
+                    android:text="Cancel"
+                    android:paddingLeft="5dp"
+                    android:drawableLeft="@drawable/ic_close_black_24dp"/>
 
 
             </LinearLayout>
